# codecrafters-http-server

./: Cargo.toml  README.md  improvements.txt  rustc-ice-2024-09-02T14_46_04-3619.txt  rustc-ice-2024-09-02T14_46_04-3620.txt
src/: http.rs  main.rs
src/http/: message.rs  request.rs  response.rs  router.rs
src/http/message/: message.rs  request.rs  response.rs
