[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
thiserror = "1.0.38"
regex = "1.10.6"
tokio = { version = "1.40.0", features = ["net", "rt", "rt-multi-thread", "macros", "io-util"] }